images displayed into collectionview

--- a/Example/WRGImageGallery/Base.lproj/Main.storyboard
+++ b/Example/WRGImageGallery/Base.lproj/Main.storyboard
@@ -21,11 +21,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Wht-hh-pNU">
-                                <rect key="frame" x="0.0" y="10" width="375" height="647"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Wht-hh-pNU">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6rc-eG-eSh">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="6rc-eG-eSh">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -45,6 +44,7 @@
                                                 </view>
                                             </subviews>
                                         </view>
+                                        <color key="backgroundColor" red="0.43845531510000002" green="0.56717861749999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="zi5-vN-pHT" secondAttribute="bottom" id="HRa-5F-4ys"/>
                                             <constraint firstAttribute="trailing" secondItem="zi5-vN-pHT" secondAttribute="trailing" id="TLv-nw-I7n"/>
@@ -63,6 +63,12 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Wht-hh-pNU" secondAttribute="trailing" id="1xw-5g-QZM"/>
+                            <constraint firstItem="Wht-hh-pNU" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="JHn-Fb-zUz"/>
+                            <constraint firstItem="Wht-hh-pNU" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="dzS-YA-Ufz"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Wht-hh-pNU" secondAttribute="bottom" id="fkp-Bo-Gzj"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
