--- a/Example/WRGImageGallery/Base.lproj/Main.storyboard
+++ b/Example/WRGImageGallery/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zi5-vN-pHT" customClass="WRGZoomableImageView" customModule="WRGImageGallery_Example" customModuleProvider="target">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zi5-vN-pHT" customClass="WRGNetworkImageView" customModule="WRGImageGallery">
                                                     <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
