--- a/Example/WRGImageGallery/Base.lproj/Main.storyboard
+++ b/Example/WRGImageGallery/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="7Ds-jd-xFs">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Gallery Sample-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="WRGImageGallery_Example" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,63 +17,46 @@
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
+                    <view key="view" opaque="NO" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Wht-hh-pNU">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="6rc-eG-eSh">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCell" id="2YM-rA-BMC" customClass="WRGImageCell" customModule="WRGImageGallery_Example" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zi5-vN-pHT" customClass="WRGNetworkImageView" customModule="WRGImageGallery">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </view>
-                                            </subviews>
-                                        </view>
-                                        <color key="backgroundColor" red="0.43845531510000002" green="0.56717861749999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="zi5-vN-pHT" secondAttribute="bottom" id="HRa-5F-4ys"/>
-                                            <constraint firstAttribute="trailing" secondItem="zi5-vN-pHT" secondAttribute="trailing" id="TLv-nw-I7n"/>
-                                            <constraint firstItem="zi5-vN-pHT" firstAttribute="leading" secondItem="2YM-rA-BMC" secondAttribute="leading" id="Y83-OX-rYT"/>
-                                            <constraint firstItem="zi5-vN-pHT" firstAttribute="top" secondItem="2YM-rA-BMC" secondAttribute="top" id="usB-01-YhX"/>
-                                        </constraints>
-                                        <connections>
-                                            <outlet property="scrollImageView" destination="zi5-vN-pHT" id="kxN-Cl-wJE"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NUx-q5-NbT" userLabel="Show Gallery">
+                                <rect key="frame" x="142" y="318" width="90" height="30"/>
+                                <state key="normal" title="Show Gallery"/>
                                 <connections>
-                                    <outlet property="dataSource" destination="vXZ-lx-hvc" id="Ds9-tR-5OF"/>
-                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="ad8-UH-ByS"/>
+                                    <action selector="buttonShowGalleryDidClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="mQG-JZ-rJ4"/>
                                 </connections>
-                            </collectionView>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Wht-hh-pNU" secondAttribute="trailing" id="1xw-5g-QZM"/>
-                            <constraint firstItem="Wht-hh-pNU" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="JHn-Fb-zUz"/>
-                            <constraint firstItem="Wht-hh-pNU" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="dzS-YA-Ufz"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Wht-hh-pNU" secondAttribute="bottom" id="fkp-Bo-Gzj"/>
+                            <constraint firstItem="NUx-q5-NbT" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="gDU-Nk-ajR"/>
+                            <constraint firstItem="NUx-q5-NbT" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="pfo-Ok-gGg"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Gallery Sample" id="feB-Hv-uyQ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-924" y="0.0"/>
+            <point key="canvasLocation" x="-889" y="0.0"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="IdW-9T-gKK">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7Ds-jd-xFs" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Sm8-li-5f6">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="qAJ-dp-vrB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sH1-Cx-LXl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1602" y="0.0"/>
         </scene>
     </scenes>
 </document>
