--- a/WRGImageGallery/Assets/ImageGallery.storyboard
+++ b/WRGImageGallery/Assets/ImageGallery.storyboard
@@ -19,23 +19,30 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" pagingEnabled="YES" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0hI-Xh-Ng5">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="X1r-ri-m7T">
-                                    <size key="itemSize" width="50" height="50"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="X1r-ri-m7T">
+                                    <size key="itemSize" width="130" height="132"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCell" id="Kdq-eo-UPq" customClass="WRGImageCell" customModule="WRGImageGallery" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="130" height="132"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="130" height="132"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g5L-PV-dkh" customClass="WRGNetworkImageView" customModule="WRGImageGallery" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="130" height="132"/>
                                                 </view>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="1bV-iE-9n4">
+                                                    <rect key="frame" x="45" y="46" width="40" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="XVp-uu-3Sz"/>
+                                                        <constraint firstAttribute="width" constant="40" id="rPz-n4-zGS"/>
+                                                    </constraints>
+                                                </activityIndicatorView>
                                             </subviews>
                                         </view>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -43,9 +50,12 @@
                                             <constraint firstAttribute="trailing" secondItem="g5L-PV-dkh" secondAttribute="trailing" id="1vo-HO-R3s"/>
                                             <constraint firstAttribute="bottom" secondItem="g5L-PV-dkh" secondAttribute="bottom" id="4Dc-h9-Y6u"/>
                                             <constraint firstItem="g5L-PV-dkh" firstAttribute="top" secondItem="Kdq-eo-UPq" secondAttribute="top" id="Faw-Cw-gie"/>
+                                            <constraint firstItem="1bV-iE-9n4" firstAttribute="centerX" secondItem="Kdq-eo-UPq" secondAttribute="centerX" id="UeF-QY-bd4"/>
+                                            <constraint firstItem="1bV-iE-9n4" firstAttribute="centerY" secondItem="Kdq-eo-UPq" secondAttribute="centerY" id="hcW-oO-hVU"/>
                                             <constraint firstItem="g5L-PV-dkh" firstAttribute="leading" secondItem="Kdq-eo-UPq" secondAttribute="leading" id="rg6-Aa-FlJ"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="activityIndicator" destination="1bV-iE-9n4" id="W1B-uN-xws"/>
                                             <outlet property="imageView" destination="g5L-PV-dkh" id="72A-Hg-uNN"/>
                                         </connections>
                                     </collectionViewCell>
@@ -56,11 +66,12 @@
                                 </connections>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lEa-0P-9MJ">
-                                <rect key="frame" x="18" y="28" width="20" height="20"/>
+                                <rect key="frame" x="0.0" y="20" width="40" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="20" id="Edj-s2-wRW"/>
-                                    <constraint firstAttribute="height" constant="20" id="FTS-r1-fw3"/>
+                                    <constraint firstAttribute="width" constant="40" id="Edj-s2-wRW"/>
+                                    <constraint firstAttribute="height" constant="40" id="FTS-r1-fw3"/>
                                 </constraints>
+                                <inset key="imageEdgeInsets" minX="20" minY="20" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="Button" image="ic_close"/>
                                 <connections>
                                     <action selector="buttonCloseDidClick:" destination="OaZ-Nh-zbK" eventType="touchUpInside" id="zCP-G7-A7s"/>
@@ -79,8 +90,8 @@
                             <constraint firstItem="BAL-hK-hN7" firstAttribute="bottom" secondItem="0hI-Xh-Ng5" secondAttribute="bottom" id="Bzx-SJ-wjG"/>
                             <constraint firstItem="0hI-Xh-Ng5" firstAttribute="leading" secondItem="BAL-hK-hN7" secondAttribute="leading" id="JkV-Ev-j4S"/>
                             <constraint firstItem="0hI-Xh-Ng5" firstAttribute="top" secondItem="BAL-hK-hN7" secondAttribute="top" id="SM0-zj-ZvN"/>
-                            <constraint firstItem="lEa-0P-9MJ" firstAttribute="leading" secondItem="TpW-x6-em2" secondAttribute="leading" constant="18" id="VFF-sC-K6Z"/>
-                            <constraint firstItem="lEa-0P-9MJ" firstAttribute="top" secondItem="BAL-hK-hN7" secondAttribute="top" constant="8" id="Y9b-Of-711"/>
+                            <constraint firstItem="lEa-0P-9MJ" firstAttribute="leading" secondItem="TpW-x6-em2" secondAttribute="leading" id="VFF-sC-K6Z"/>
+                            <constraint firstItem="lEa-0P-9MJ" firstAttribute="top" secondItem="BAL-hK-hN7" secondAttribute="top" id="Y9b-Of-711"/>
                             <constraint firstItem="Cb8-vq-tdL" firstAttribute="centerX" secondItem="TpW-x6-em2" secondAttribute="centerX" id="bqk-bz-NbQ"/>
                             <constraint firstItem="BAL-hK-hN7" firstAttribute="trailing" secondItem="0hI-Xh-Ng5" secondAttribute="trailing" id="dYa-CS-bQ6"/>
                         </constraints>
@@ -93,7 +104,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yDj-UY-gMc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-74" y="95"/>
+            <point key="canvasLocation" x="-74.400000000000006" y="94.902548725637189"/>
         </scene>
     </scenes>
     <resources>
