--- a/WRGImageGallery/Assets/ImageGallery.storyboard
+++ b/WRGImageGallery/Assets/ImageGallery.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OaZ-Nh-zbK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OaZ-Nh-zbK">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -71,8 +71,9 @@
                                     <constraint firstAttribute="width" constant="40" id="Edj-s2-wRW"/>
                                     <constraint firstAttribute="height" constant="40" id="FTS-r1-fw3"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <inset key="imageEdgeInsets" minX="20" minY="20" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" title="Button" image="ic_close"/>
+                                <state key="normal" title="Close"/>
                                 <connections>
                                     <action selector="buttonCloseDidClick:" destination="OaZ-Nh-zbK" eventType="touchUpInside" id="zCP-G7-A7s"/>
                                 </connections>
@@ -98,6 +99,7 @@
                         <viewLayoutGuide key="safeArea" id="BAL-hK-hN7"/>
                     </view>
                     <connections>
+                        <outlet property="buttonClose" destination="lEa-0P-9MJ" id="50O-yu-f9Z"/>
                         <outlet property="collectionView" destination="0hI-Xh-Ng5" id="0Va-e4-0P4"/>
                         <outlet property="labelPosition" destination="Cb8-vq-tdL" id="CEQ-PZ-0uX"/>
                     </connections>
@@ -107,7 +109,4 @@
             <point key="canvasLocation" x="-74.400000000000006" y="94.902548725637189"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="ic_close" width="384" height="384"/>
-    </resources>
 </document>
